--- a/views/epiveveosi_pliromis.ejs
+++ b/views/epiveveosi_pliromis.ejs
@@ -1,6 +1,20 @@
 <% include partials/header.ejs %>
 
 
+
+<script>
+	var sec = 16;
+    function pad ( val ) { return val > 9 ? val : "0" + val; }
+    setInterval( function(){
+        $("#seconds").html(pad(--sec%60));
+        $("#minutes").html(pad(parseInt(sec/60,10)));
+    }, 1000);
+
+</script>
+
+
+
+
 <div class="container">
 	<header class="jumbotron">
 		<div class="container">
@@ -13,12 +27,14 @@
 			
 			
 			<script>
-				setTimeout(function(){ window.location.href="/"; }, 15000);
+				setTimeout(function(){ window.location.href="/"; }, 16000);
 			</script>
 		<div>
 		
 			
-		<p> Θα γίνει αυτόματη επιστροφή στην αρχική σελίδα σε 15 δευτερόλπτα. </p>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		
+		<p> Θα γίνει αυτόματη επιστροφή στην αρχική σελίδα σε <b><span id="seconds"></span></b> δευτερόλπτα. </p>
 		
 	</header>
 </div>
