--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -80,6 +80,8 @@
 						  <a class="dropdown-item" href="/24wra_leoforeia">24ωρα Δρομολόγια</a>
 						  <a class="dropdown-item" href="/nyxterina_dromologia">Νυχτερινά δρομολόγια</a>
 						  <a class="dropdown-item" href="/24wra_leoforeia">Δρομολόγια προς αεροδρόμιο</a>
+						  <a class="dropdown-item" href="/oles_oi_grammes">Όλες οι γραμμές</a>
+						  
 						</div>
 					</li>
 					
@@ -145,7 +147,7 @@
 						  <a class="dropdown-item" href="/account">ΡυθμίσειςΛογαριασμού</a>
 						  
 						  <a class="dropdown-item" href="/oi_agores_mou">Οι αγορές μου</a>
-						  <a class="dropdown-item" href="#">Τα δρομολόγια μου</a>
+						  <a class="dropdown-item" href="/dromologia_mou">Τα δρομολόγια μου</a>
 						</div>
 					</li>	
 					
