--- a/views/times_eisitirion.ejs
+++ b/views/times_eisitirion.ejs
@@ -1,8 +1,11 @@
 <% include partials/header.ejs %>
 
 <div class="container">
+    <strong><h3 class="text-center">Τιμές εισιτηρίων</h3></strong>
+	<br><br>
+
     <table class="table table-bordered table-hover">
-        <thead class="thead-light">
+        <thead class="thead-dark">
         <tr>
             <th style="width: 23%;" scope="col">Όνομα εισιτηρίου</th>
             <th style="width: 70%;" scope="col">Περιγραφή εισιτηρίου</th>
