--- a/views/partials/header_en.ejs
+++ b/views/partials/header_en.ejs
@@ -43,8 +43,8 @@
 							</div>
 							<div class="col-md topper d-flex align-items-center justify-content-end">
 								<p class="mb-0 d-block">
-									<a href="/home_en" class="btn py-2 px-3 btn-primary">
-										<span>ENGLISH</span>
+									<a href="/" class="btn py-2 px-3 btn-primary">
+										<span>ΕΛΛΗΝΙΚΑ</span>
 									</a>
 								</p>
 							</div>
@@ -76,11 +76,11 @@
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="/anazitisi_diadromis">Δρομολόγια/Στάσεις</a>
-						  <a class="dropdown-item" href="/24wra_leoforeia">24ωρα Δρομολόγια</a>
-						  <a class="dropdown-item" href="/nyxterina_dromologia">Νυχτερινά δρομολόγια</a>
-						  <a class="dropdown-item" href="/24wra_leoforeia">Δρομολόγια προς αεροδρόμιο</a>
-						  <a class="dropdown-item" href="/oles_oi_grammes">Όλες οι γραμμές</a>
+						  <a class="dropdown-item" href="/anazitisi_diadromis">Routes/Stations</a>
+						  <a class="dropdown-item" href="/24wra_leoforeia">24-hour routes</a>
+						  <a class="dropdown-item" href="/nyxterina_dromologia">Nightime routes</a>
+						  <a class="dropdown-item" href="/24wra_leoforeia">Routes to airport</a>
+						  <a class="dropdown-item" href="/oles_oi_grammes">All lines</a>
 						  
 						</div>
 					</li>
@@ -88,44 +88,44 @@
 					
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Εισιτήρια/Κάρτες 
+						  Tickets/Cards 
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="/epanafortisi_kartas">Επαναφόρτιση κάρτας</a>
-						  <a class="dropdown-item" href="/agora_eisitirion">Αγορά εισιτηρίων</a>
-						  <a class="dropdown-item" href="/times_eisitirion">Τιμές εισιτηρίων</a>
-						  <a class="dropdown-item" href="#">Δικαιολογητικά έκδοσης κάρτας</a>
-						  <a class="dropdown-item" href="#">Σταθμοί έκδοσης καρτών</a>
+						  <a class="dropdown-item" href="/epanafortisi_kartas">Recharge Card</a>
+						  <a class="dropdown-item" href="/agora_eisitirion">Buy Tickets</a>
+						  <a class="dropdown-item" href="/times_eisitirion">Ticket Prices</a>
+						  <a class="dropdown-item" href="#">Papers to Make a Card</a>
+						  <a class="dropdown-item" href="#">Card Stations</a>
 						</div>
 					</li>
 					  
 					  
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  ΑμεΑ
+						  People with disabilities
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="/staseis_amea">Στάσεις με προεξοχές</a>
-						  <a class="dropdown-item" href="#">Εισιτήρια/Κάρτες</a>
+						  <a class="dropdown-item" href="/staseis_amea">Stations with help</a>
+						  <a class="dropdown-item" href="#">Tickets/Cards</a>
 						</div>
 					</li>
 					
 					
 					<li class="nav-item active">
-						<a class="nav-link" href="/anakoinoseis">Ανακοινώσεις</a>
+						<a class="nav-link" href="/anakoinoseis">News</a>
 					</li>			
 					
 					
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Επικοινωνία
+						  Contact
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="/epikoinonia">Στοιχεία επικοινωνίας</a>
-						  <a class="dropdown-item" href="/parapona">Παράπονα</a>
+						  <a class="dropdown-item" href="/epikoinonia">Contact Information</a>
+						  <a class="dropdown-item" href="/parapona">Complaints</a>
 						</div>
 					</li>
 					
@@ -143,11 +143,11 @@
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="/my_account">Ο Λογαριασμός μου</a>
-						  <a class="dropdown-item" href="/account">ΡυθμίσειςΛογαριασμού</a>
+						  <a class="dropdown-item" href="/my_account">My Account</a>
+						  <a class="dropdown-item" href="/account">Account Settings</a>
 						  
-						  <a class="dropdown-item" href="/oi_agores_mou">Οι αγορές μου</a>
-						  <a class="dropdown-item" href="/dromologia_mou">Τα δρομολόγια μου</a>
+						  <a class="dropdown-item" href="/oi_agores_mou">My Transactions</a>
+						  <a class="dropdown-item" href="/dromologia_mou">My Routes</a>
 						</div>
 					</li>	
 					
@@ -155,16 +155,16 @@
 
 					
 					<li class="nav-item active">
-						<a class="nav-link" href="/logout"> <i class="fa fa-sign-out fa-xs"></i> Αποσύνδεση</a>
+						<a class="nav-link" href="/logout"> <i class="fa fa-sign-out fa-xs"></i> Logout</a>
 					</li>
 				</ul>
 		    <% }else{ %>
 				<ul class="navbar-nav">
 					<li class="nav-item active">
-						<a class="nav-link" href="/login"><i class="fa fa-sign-in fa-xs"></i> Σύνδεση</a>
+						<a class="nav-link" href="/login"><i class="fa fa-sign-in fa-xs"></i> Login</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="/register"><i class="fa fa-user-plus fa-xs"></i> Εγγραφή</a>
+						<a class="nav-link" href="/register"><i class="fa fa-user-plus fa-xs"></i> Signin</a>
 					</li>
 				</ul>
       	    <% } %>
