--- a/views/partials/header_en.ejs
+++ b/views/partials/header_en.ejs
@@ -72,7 +72,7 @@
 					  
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Δρομολόγια
+						  Routes
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -164,7 +164,7 @@
 						<a class="nav-link" href="/login"><i class="fa fa-sign-in fa-xs"></i> Login</a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="/register"><i class="fa fa-user-plus fa-xs"></i> Signin</a>
+						<a class="nav-link" href="/register"><i class="fa fa-user-plus fa-xs"></i> Register</a>
 					</li>
 				</ul>
       	    <% } %>
