--- a/views/home_en.ejs
+++ b/views/home_en.ejs
@@ -138,7 +138,7 @@
 				<h5 align="center"> <a target="_blank" rel="noopener noreferrer" href="http://www.osy.gr/">OSY</a> </h5>
 				<h5 align="center"> <a target="_blank" rel="noopener noreferrer" href="http://www.stasy.gr/">STASY</a> </h5>
 				<h5 align="center"> <a target="_blank" rel="noopener noreferrer" href="https://diavgeia.gov.gr/">DIAVGEIA</a> </h5>
-				<h5 align="center"> <a target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.att.android.tfa&hl=el">Οασα στο κινητό</a> </h5>
+				<h5 align="center"> <a target="_blank" rel="noopener noreferrer" href="https://play.google.com/store/apps/details?id=com.att.android.tfa&hl=el">OASA phone app</a> </h5>
 
 			</div>
 		</div>
