--- a/views/home.ejs
+++ b/views/home.ejs
@@ -117,7 +117,7 @@
 		  <div class="card bg-light">
 			<img class="card-img-top" height="160" width="100" src="https://www.irishtimes.com/polopoly_fs/1.3745445.1546366877!/image/image.jpg_gen/derivatives/box_620_330/image.jpg" alt="Card image cap">
 			<div class="card-body">
-			  <h3 style="text-align: center; color: black;" class="card-title">  <a href="#" class="btn btn-outline-primary" role="button"><b>Τιμές εισιτηρίων</b></a>   </h3>
+			  <h3 style="text-align: center; color: black;" class="card-title">  <a href="/times_eisitirion" class="btn btn-outline-primary" role="button"><b>Τιμές εισιτηρίων</b></a>   </h3>
 			</div>
 		  </div>
 		</div>
