--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,8 +41,12 @@
 									<span>Call Us: + 1235 2355 98</span>
 								</div>
 							</div>
-							<div class="col-md topper d-flex align-items-center justify-content-end">
+                            <div class="col-md topper d-flex align-items-center justify-content-end">
 								<p class="mb-0 d-block">
+									<a href="/egxeiridio" class="btn py-2 px-3 btn-primary">
+										<span>Εγχειρίδιο Χρήσης</span>
+									</a>
+
 									<a href="/home_en" class="btn py-2 px-3 btn-primary">
 										<span>ENGLISH</span>
 									</a>
