--- a/views/egxeiridio.ejs
+++ b/views/egxeiridio.ejs
@@ -9,11 +9,11 @@
     
     <h4 align="center"><b> Αναζήτηση Δρομολογίου </b></h4>
     
-    <img src="/images/screenshot.png">
+    <img src="/screenshot.png">
     <h4>Εισαγωγή στοιχείων αφετηρίας και προορισμού με κεφαλαίο το πρώτο γράμμα και χωρίς τόνους</h4>
     <h4>Πίεση κουμπιού "Αναζήτηση"</h4>
 
-    <img src="/images/screenshot_1.png">    
+    <img src="/screenshot_1.png">    
     <h4>Επιλογή του επιθυμιτού δρομολογίου και εμφάνισή του στον χάρτη</h4>
     
 
