--- a/public/login.css
+++ b/public/login.css
@@ -5,3 +5,94 @@ body {
 }
 
 
+
+.help-tip{
+    
+   
+    text-align: center;
+    background-color: #404040;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    font-size: 14px;
+    line-height: 26px;
+    cursor: default;
+}
+
+.help-tip:before{
+    content:'?';
+    font-weight: bold;
+    color: white;
+}
+
+.help-tip:hover p{
+    display:block;
+    transform-origin: 100% 0%;
+
+    -webkit-animation: fadeIn 0.3s ease-in-out;
+    animation: fadeIn 0.3s ease-in-out;
+
+}
+
+.help-tip p{    /* The tooltip */
+
+	position: absolute;
+    display: none;
+    text-align: left;
+    background-color: #333333;
+    padding: 10px;
+    width: 180px;
+    
+    border-radius: 10px;
+    box-shadow: 7px 7px 4px rgba(0, 0, 0, 0.2);
+    right: 35px;
+    color: #FFF;
+    font-size: 13px;
+    line-height: 1.4;
+	
+}
+
+.help-tip p:before{ /* The pointer of the tooltip */
+    position: absolute;
+    content: '';
+    width:0;
+    height: 0;
+    border:6px solid transparent;
+    border-bottom-color: #333333;
+    left: 25px;
+    top: 35px;
+}
+
+
+
+
+
+
+
+.help-tip p:after{ /* Prevents the tooltip from being hidden */
+    width:100%;
+    height:40px;
+    content:'';
+    position: absolute;
+    top:-40px;
+    left:0;
+}
+
+/* CSS animation */
+
+@-webkit-keyframes fadeIn {
+    0% { 
+        opacity:0; 
+        transform: scale(0.6);
+    }
+
+    100% {
+        opacity:100%;
+        transform: scale(1);
+    }
+}
+
+@keyframes fadeIn {
+    0% { opacity:0; }
+    100% { opacity:100%; }
+}
