--- a/views/epanafortisi_kartas.ejs
+++ b/views/epanafortisi_kartas.ejs
@@ -15,35 +15,72 @@
 				<div class="row">					
 					
 					<div class="col">
-						<div style="width: 55%; margin-top: 5%;">
-		
-								<h4><b>Κόμιστρο </b><h4>
-								<br>
-
-								<div class="form-group">
-								  <select class="form-control" name="stoixeia[komistro]">
-									<option>Ενιαίο εισιτήριο 90 λεπτών (1.40€)</option>
-									<option>Μειωμένο εισιτήριο 90 λεπτών (0.60€)</option>
-									<option>Ημερήσιο εισιτήριο (4.50€)</option>
-									<option>Εισιτήριο πέντε ημερών (9.00€)</option>
-								  </select>
+					
+					
+						<h4><b>Κόμιστο</b></h4>
+						<br>
+	
+						<div class="row">
+							<div class="col">
+								<b>Ενιαίο εισιτήριο 90 λεπτών (1.40€)</b>
+							</div>
+						
+							
+							<div class="col">
+								<div style="width: 30%;">
+									<input type="Number" class="form-control" name = "stoixeia[posotita1]" placeholder="0" value = "0">
 								</div>
-							  
-							  
-								<br>
-								<h4><b>Ποσότητα</b><h4>
-								<br>
-								
-								<div class="form-group">
-									<input type="text" class="form-control" name = "stoixeia[posotita]" id="exampleInputEmail1" placeholder="ποσότητα (π.χ. 5)">
+							</div>
+						</div>
+						<br>
+						
+						<div class="row">
+							<div class="col">
+								<b>Μειωμένο εισιτήριο 90 λεπτών (0.60€)</b>
+							</div>
+						
+							
+							<div class="col">
+								<div style="width: 30%;">
+									<input type="Number" class="form-control" name = "stoixeia[posotita2]" placeholder="0" value = "0">
 								</div>
-								
-
+							</div>
+						</div>
+						<br>
+						
+						<div class="row">
+							<div class="col">
+								<b>Ημερήσιο εισιτήριο (4.50€)</b>
+							</div>
+						
+							
+							<div class="col">
+								<div style="width: 30%;">
+									<input type="Number" class="form-control" name = "stoixeia[posotita3]" placeholder="0" value = "0">
+								</div>
+							</div>
+						</div>
+						<br>
+						
+						
+						<div class="row">
+							<div class="col">
+								<b>Εισιτήριο πέντε ημερών (9.00€)</b>
+							</div>
+						
+							
+							<div class="col">
+								<div style="width: 30%;">
+									<input type="Number" class="form-control" name = "stoixeia[posotita4]" placeholder="0" value = "0">
+								</div>
+							</div>
 						</div>
 						
-						<br><br><br><br><br><br>
+						
+						<br> <br><br>
 						<a href="/">Ακύρωση</a>
 					</div>
+				
 					
 					
 					<div class="col">
@@ -69,7 +106,7 @@
 								</div>
 								
 							
-							<br> <br><br> <br><br> <br>
+							<br> <br><br> 
 							
 
 							<div class="form-group">
@@ -80,17 +117,18 @@
 						</div>				
 						
 					</div>
-					
-					
 				</div>
 			</div>
-			
 		</form>
+		
+		
 		
 	<% }else{ %>
 	
+	
+	
+	
 		<form action="/epanafortisi_kartas/112" method="POST">
-			
 			<div class="container">
 				<div class="row">
 
@@ -131,31 +169,71 @@
 					
 					
 					<div class="col">
-						<div style="width: 55%; margin-top: 5%;">
-		
-								<h4><b>Κόμιστρο </b><h4>
-								<br>
-
-								<div class="form-group">
-								  <select class="form-control" name="stoixeia[komistro]">
-									<option>Ενιαίο εισιτήριο 90 λεπτών (1.40€)</option>
-									<option>Μειωμένο εισιτήριο 90 λεπτών (0.60€)</option>
-									<option>Ημερήσιο εισιτήριο (4.50€)</option>
-									<option>Εισιτήριο πέντε ημερών (9.00€)</option>
-								  </select>
+					
+					
+						<h4><b>Κόμιστο</b></h4>
+						<br>
+	
+						<div class="row">
+							<div class="col">
+								<b>Ενιαίο εισιτήριο 90 λεπτών (1.40€)</b>
+							</div>
+						
+							
+							<div class="col">
+								<div style="width: 45%;">
+									<input type="Number" class="form-control" name = "stoixeia[posotita1]" placeholder="0" value = "0">
 								</div>
-							  
-							  
-								<br>
-								<h4><b>Ποσότητα</b><h4>
-								<br>
-								
-								<div class="form-group">
-									<input type="text" class="form-control" name = "stoixeia[posotita]" id="exampleInputEmail1" placeholder="ποσότητα (π.χ. 5)">
-								</div>
-								
-
+							</div>
+							
 						</div>
+						<br>
+						
+						<div class="row">
+							<div class="col">
+								<b>Μειωμένο εισιτήριο 90 λεπτών (0.60€)</b>
+							</div>
+						
+							
+							<div class="col">
+								<div style="width: 45%;">
+									<input type="Number" class="form-control" name = "stoixeia[posotita2]" placeholder="0" value = "0">
+								</div>
+							</div>
+							
+						</div>
+						<br>
+						
+						<div class="row">
+							<div class="col">
+								<b>Ημερήσιο εισιτήριο (4.50€)</b>
+							</div>
+						
+							
+							<div class="col">
+								<div style="width: 45%;">
+									<input type="Number" class="form-control" name = "stoixeia[posotita3]" placeholder="0" value = "0">
+								</div>
+							</div>
+							
+						</div>
+						<br>
+						
+						
+						<div class="row">
+							<div class="col">
+								<b>Εισιτήριο πέντε ημερών (9.00€)</b>
+							</div>
+						
+							
+							<div class="col">
+								<div style="width: 45%;">
+									<input type="Number" class="form-control" name = "stoixeia[posotita4]" placeholder="0" value = "0">
+								</div>
+							</div>
+							
+						</div>
+					
 					</div>
 					
 					
@@ -177,10 +255,6 @@
 							<br> <br><br> <br><br> <br><br> <br><br> <br><br> <br><br>
 							
 							
-							
-
-							
-							
 							<br>
 							<div class="form-group">
 								<button class="btn btn-sm btn-success btn-default btn-block" >Συνέχεια</button>
@@ -188,13 +262,10 @@
 							
 							
 						</div>				
-						
 					</div>
-					
 					
 				</div>
 			</div>
-			
 		</form>
 	
 	<% } %>
