--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -83,7 +83,7 @@
 						  <a class="dropdown-item" href="/anazitisi_diadromis">Δρομολόγια/Στάσεις</a>
 						  <a class="dropdown-item" href="/24wra_leoforeia">24ωρα Δρομολόγια</a>
 						  <a class="dropdown-item" href="/nyxterina_dromologia">Νυχτερινά δρομολόγια</a>
-						  <a class="dropdown-item" href="/24wra_leoforeia">Δρομολόγια προς αεροδρόμιο</a>
+						  <a class="dropdown-item" href="/dromologia_aerodromiou">Δρομολόγια προς αεροδρόμιο</a>
 						  <a class="dropdown-item" href="/oles_oi_grammes">Όλες οι γραμμές</a>
 						  
 						</div>
@@ -99,8 +99,8 @@
 						  <a class="dropdown-item" href="/epanafortisi_kartas">Επαναφόρτιση κάρτας</a>
 						  <a class="dropdown-item" href="/agora_eisitirion">Αγορά εισιτηρίων</a>
 						  <a class="dropdown-item" href="/times_eisitirion">Τιμές εισιτηρίων</a>
-						  <a class="dropdown-item" href="#">Δικαιολογητικά έκδοσης κάρτας</a>
-						  <a class="dropdown-item" href="#">Σταθμοί έκδοσης καρτών</a>
+						  <a class="dropdown-item" href="/dikaiologitika">Δικαιολογητικά έκδοσης κάρτας</a>
+						  <a class="dropdown-item" href="/stathmoi_ekdosis">Σταθμοί έκδοσης καρτών</a>
 						</div>
 					</li>
 					  
