--- a/views/agora_eisitirion.ejs
+++ b/views/agora_eisitirion.ejs
@@ -27,7 +27,7 @@
 							
 							<div class="col">
 								<div style="width: 30%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita1]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita1]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
@@ -42,7 +42,7 @@
 							
 							<div class="col">
 								<div style="width: 30%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita2]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita2]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
@@ -57,7 +57,7 @@
 							
 							<div class="col">
 								<div style="width: 30%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita3]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita3]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
@@ -73,7 +73,7 @@
 							
 							<div class="col">
 								<div style="width: 30%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita4]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita4]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
@@ -156,25 +156,25 @@
 								<br><br>
 								
 								<div class="form-group">
-									<input type="text" class="form-control" name = "stoixeia[onoma]" id="exampleInputEmail1" placeholder="Όνομα">
+									<input type="text" class="form-control" name = "stoixeia[onoma]" id="exampleInputEmail1" placeholder="Όνομα" required>
 								</div>
 								
 								<div class="form-group">
-									<input type="text" class="form-control" name = "stoixeia[eponimo]" id="exampleInputEmail1" placeholder="Επώνυμο">
+									<input type="text" class="form-control" name = "stoixeia[eponimo]" id="exampleInputEmail1" placeholder="Επώνυμο" required>
 								</div>
 								
 								<div class="form-group">
-									<input type="email" class="form-control" name = "stoixeia[email]" id="exampleInputEmail1" placeholder="email">
+									<input type="email" class="form-control" name = "stoixeia[email]" id="exampleInputEmail1" placeholder="email" required>
 								</div>
 								
 								
 								
 								<div class="form-group">
-									<input type="text" class="form-control" name = "stoixeia[dieuthinsi]" id="exampleInputEmail1" placeholder="Διεύθυνση">
+									<input type="text" class="form-control" name = "stoixeia[dieuthinsi]" id="exampleInputEmail1" placeholder="Διεύθυνση" required>
 								</div>
 								
 								<div class="form-group">
-									<input type="number" class="form-control" name = "stoixeia[tx]" id="exampleInputEmail1" placeholder="Ταχυδρομικός κώδικας">
+									<input type="number" class="form-control" name = "stoixeia[tx]" id="exampleInputEmail1" placeholder="Ταχυδρομικός κώδικας" required>
 								</div>
 							
 						</div>
@@ -199,7 +199,7 @@
 							
 							<div class="col">
 								<div style="width: 45%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita1]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita1]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
@@ -214,7 +214,7 @@
 							
 							<div class="col">
 								<div style="width: 45%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita2]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita2]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
@@ -229,7 +229,7 @@
 							
 							<div class="col">
 								<div style="width: 45%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita3]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita3]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
@@ -245,7 +245,7 @@
 							
 							<div class="col">
 								<div style="width: 45%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita4]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita4]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
