--- a/views/epanafortisi_kartas.ejs
+++ b/views/epanafortisi_kartas.ejs
@@ -28,7 +28,7 @@
 							
 							<div class="col">
 								<div style="width: 30%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita1]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita1]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 						</div>
@@ -42,7 +42,7 @@
 							
 							<div class="col">
 								<div style="width: 30%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita2]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita2]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 						</div>
@@ -56,7 +56,7 @@
 							
 							<div class="col">
 								<div style="width: 30%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita3]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita3]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 						</div>
@@ -71,7 +71,7 @@
 							
 							<div class="col">
 								<div style="width: 30%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita4]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita4]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 						</div>
@@ -90,7 +90,7 @@
 								<br>
 								
 								<div class="form-group">
-									<input type="text" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="Κωδικός κάρτας">
+									<input type="text" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="Κωδικός κάρτας" required>
 								</div>
 							
 								<br>
@@ -140,15 +140,15 @@
 								<br>
 								
 								<div class="form-group">
-									<input type="text" class="form-control" name = "stoixeia[onoma]" id="exampleInputEmail1" placeholder="Όνομα">
+									<input type="text" class="form-control" name = "stoixeia[onoma]" id="exampleInputEmail1" placeholder="Όνομα" required>
 								</div>
 								
 								<div class="form-group">
-									<input type="text" class="form-control" name = "stoixeia[eponimo]" id="exampleInputEmail1" placeholder="Επώνυμο">
+									<input type="text" class="form-control" name = "stoixeia[eponimo]" id="exampleInputEmail1" placeholder="Επώνυμο" required>
 								</div>
 								
 								<div class="form-group">
-									<input type="email" class="form-control" name = "stoixeia[email]" id="exampleInputEmail1" placeholder="email">
+									<input type="email" class="form-control" name = "stoixeia[email]" id="exampleInputEmail1" placeholder="email" required>
 								</div>
 								
 								<br>
@@ -156,7 +156,7 @@
 								<br>
 								
 								<div class="form-group">
-									<input type="text" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="Κωδικός κάρτας">
+									<input type="text" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="Κωδικός κάρτας" required>
 								</div>
 							
 							
@@ -182,7 +182,7 @@
 							
 							<div class="col">
 								<div style="width: 45%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita1]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita1]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
@@ -197,7 +197,7 @@
 							
 							<div class="col">
 								<div style="width: 45%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita2]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita2]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
@@ -212,7 +212,7 @@
 							
 							<div class="col">
 								<div style="width: 45%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita3]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita3]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
@@ -228,7 +228,7 @@
 							
 							<div class="col">
 								<div style="width: 45%;">
-									<input type="Number" class="form-control" name = "stoixeia[posotita4]" placeholder="0" value = "0">
+									<input type="Number" class="form-control" name = "stoixeia[posotita4]" placeholder="0" value = "0" required>
 								</div>
 							</div>
 							
