--- a/views/pliromi.ejs
+++ b/views/pliromi.ejs
@@ -18,14 +18,14 @@
 							<h5><b>Όνομα χρήστη </b><h5>
 						
 							<div class="form-group">
-								<input type="text" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="Nikos123">
+								<input type="text" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="Nikos123" required>
 							</div>
 						
 							<br>
 							<h5><b>Κωδικός </b><h5>
 							
 							<div class="form-group">
-								<input type="password" class="form-control" name = "kwdikos" id="exampleInputEmail1" placeholder="*******">
+								<input type="password" class="form-control" name = "kwdikos" id="exampleInputEmail1" placeholder="*******" required>
 							</div>
 
 						</div>
@@ -42,7 +42,7 @@
 							<h5><b>Κωδικός κάρτας </b><h5>
 						
 							<div class="form-group">
-								<input type="number" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="121213131">
+								<input type="number" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="121213131" required>
 								<p><small>Όπως εμφανίζεται στην κάρτα.</small></p>
 							</div>
 						
@@ -50,7 +50,7 @@
 							<h5><b>Όνομα δικαιούχου</b><h5>
 							
 							<div class="form-group">
-								<input type="text" class="form-control" name = "kwdikos" id="exampleInputEmail1" placeholder="Nikolaos Makrygeorgos">
+								<input type="text" class="form-control" name = "kwdikos" id="exampleInputEmail1" placeholder="Nikolaos Makrygeorgos" required>
 								<p><small>Όπως εμφανίζεται στην κάρτα.</small></p>
 							</div>
 
@@ -144,14 +144,14 @@
 							<h5><b>Όνομα χρήστη </b><h5>
 						
 							<div class="form-group">
-								<input type="text" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="Nikos123">
+								<input type="text" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="Nikos123" required>
 							</div>
 						
 							<br>
 							<h5><b>Κωδικός </b><h5>
 							
 							<div class="form-group">
-								<input type="password" class="form-control" name = "kwdikos" id="exampleInputEmail1" placeholder="*******">
+								<input type="password" class="form-control" name = "kwdikos" id="exampleInputEmail1" placeholder="*******" required>
 							</div>
 
 						</div>
@@ -170,7 +170,7 @@
 							<h5><b>Κωδικός κάρτας </b><h5>
 						
 							<div class="form-group">
-								<input type="number" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="121213131">
+								<input type="number" class="form-control" name = "stoixeia[kwdikos]" id="exampleInputEmail1" placeholder="121213131" required>
 								<p><small>Όπως εμφανίζεται στην κάρτα.</small></p>
 							</div>
 						
@@ -178,7 +178,7 @@
 							<h5><b>Όνομα δικαιούχου</b><h5>
 							
 							<div class="form-group">
-								<input type="text" class="form-control" name = "kwdikos" id="exampleInputEmail1" placeholder="Nikolaos Makrygeorgos">
+								<input type="text" class="form-control" name = "kwdikos" id="exampleInputEmail1" placeholder="Nikolaos Makrygeorgos" required>
 								<p><small>Όπως εμφανίζεται στην κάρτα.</small></p>
 							</div>
 
