--- a/views/parapona.ejs
+++ b/views/parapona.ejs
@@ -20,7 +20,7 @@
 							
 								<h4><b> Ημερομηνία </b></h4>
 								<div class="form-group">
-									<input type="date" class="form-control" name = "imerominia" id="exampleInputEmail1" placeholder="">
+									<input type="date" class="form-control" name = "imerominia" id="exampleInputEmail1" placeholder="" required>
 								</div>
 								<br>
 								
@@ -38,7 +38,7 @@
 								
 								<h4><b> Γραμμή </b></h4>
 								<div class="form-group">
-									<input type="number" class="form-control" name = "grammi" id="exampleInputEmail1" placeholder="250">
+									<input type="number" class="form-control" name = "grammi" id="exampleInputEmail1" placeholder="250" required>
 								</div>
 								<br>
 								
@@ -88,20 +88,20 @@
 							
 								<h4><b> Όνομα </b></h4>
 								<div class="form-group">
-									<input type="text" class="form-control" name = "onoma" id="exampleInputEmail1" placeholder="Όνομα">
+									<input type="text" class="form-control" name = "onoma" id="exampleInputEmail1" placeholder="Όνομα" required>
 								</div>
 								<br>
 								
 								
 								<h4><b> Επώνυμο </b></h4>
 								<div class="form-group">
-									<input type="text" class="form-control" name = "eponimo" id="exampleInputEmail1" placeholder="Επώνυμο">
+									<input type="text" class="form-control" name = "eponimo" id="exampleInputEmail1" placeholder="Επώνυμο" required>
 								</div>
 								<br>
 								
 								<h4><b> Email </b></h4>
 								<div class="form-group">
-									<input type="email" class="form-control" name = "email" id="exampleInputEmail1" placeholder="email">
+									<input type="email" class="form-control" name = "email" id="exampleInputEmail1" placeholder="email" required>
 								</div>
 								<br>
 								
@@ -119,7 +119,7 @@
 							
 								<h4><b> Ημερομηνία </b></h4>
 								<div class="form-group">
-									<input type="date" class="form-control" name = "imerominia" id="exampleInputEmail1" placeholder="">
+									<input type="date" class="form-control" name = "imerominia" id="exampleInputEmail1" placeholder="" required>
 								</div>
 								<br>
 								
@@ -137,7 +137,7 @@
 								
 								<h4><b> Γραμμή </b></h4>
 								<div class="form-group">
-									<input type="number" class="form-control" name = "grammi" id="exampleInputEmail1" placeholder="">
+									<input type="number" class="form-control" name = "grammi" id="exampleInputEmail1" placeholder="" required>
 								</div>
 								<br>
 								
